# cmake_template_doc

./: .gitignore  CMakeLists.txt
cmake/: AutoGitVersion.cmake  builddoc.cmake
doc/: Makefile
doc/source/: conf.py  index.rst  intro.md
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
